fix: swagger redirect path
